k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: nestjs-starter
    labels:
        name: nestjs-starter
        environment: production
