k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nestjs-app-service
    namespace: nestjs-starter
    labels:
        app: nestjs-app
        tier: backend
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 3001
          protocol: TCP
          name: http
    selector:
        app: nestjs-app
    sessionAffinity: ClientIP
