k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-service
    namespace: nestjs-starter
    labels:
        app: postgres
        tier: database
spec:
    type: ClusterIP
    ports:
        - port: 5432
          targetPort: 5432
          protocol: TCP
          name: postgres
    selector:
        app: postgres
