k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nestjs-ingress
    namespace: nestjs-starter
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
    ingressClassName: nginx
    rules:
        - host: api.yourdomain.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nestjs-app-service
                            port:
                                number: 80
    tls:
        - hosts:
              - api.yourdomain.com
          secretName: nestjs-tls-secret
